update dev, add Dockerfile_isera2

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -484,3 +484,36 @@ services:
       - /media:/media
       - ./docker_mount:/home/developer/docker_mount
       - ${XDG_RUNTIME_DIR}/${WAYLAND_DISPLAY}:/tmp/${WAYLAND_DISPLAY}
+
+#######################added for b2dog###########################
+  u24_ipc:
+    build:
+      context: ./docker_build
+      dockerfile: u24/non_nvidia/ros2/Dockerfile_isera2
+      args:
+        user_id: ${user_id}
+    image:
+      ubuntu24.04:${PACKAGE_VERSION}-ros2
+    container_name:
+      b2dog
+    tty: true
+    stdin_open: true
+    network_mode: host
+    privileged: true
+    security_opt:
+      - seccomp=unconfined
+    cap_add:
+      - SYS_PTRACE
+    environment:
+      - DISPLAY=${DISPLAY}
+      - QT_X11_NO_MITSHM=1
+      - XAUTHORITY=${XAUTH}
+      - WAYLAND_DISPLAY=/tmp/${WAYLAND_DISPLAY}
+    volumes:
+      - /tmp/.X11-unix:/tmp/.X11-unix
+      - /etc/localtime:/etc/localtime:ro
+      - /dev:/dev
+      - /mnt:/mnt
+      - /media:/media
+      - ./docker_mount:/home/isera2/docker_mount
+      - ${XDG_RUNTIME_DIR}/${WAYLAND_DISPLAY}:/tmp/${WAYLAND_DISPLAY}
