--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Enviroment Variable
 
-PACKAGE_VERSION=v0.0.4
+# PACKAGE_VERSION=v0.0.4
+PACKAGE_VERSION=v0.0.5
+
 # Evaluate and update with `id -u`
 user_id=1000
 
